# PylotToneMRI

./: .gitignore  README.md  compare_artifacts.ipynb  environment.yml  example_config.toml  main_editer_correct.ipynb  main_editer_correct.py  main_pilottone_extract.ipynb  main_pilottone_extract.py  main_process_reference.py  mrdhelper.py  noise_graph_from_series.ipynb  pilottone_ecg_jitter.py  plot_rt_with_waveforms.py  publish.sh  pyproject.toml  recon_xdgrasp.ipynb  remove_waveform.py  requirements.txt  respiratory_from_image.py  run_all.py  run_server_recon.ipynb  run_server_recon.py  save_mrd_as_video.py  send_to_recon_server.py  truncate_acquisitions.py
editer/: __init__.py  editer.py
examples/: main_editer_correct.py  main_pilottone_extract.py  main_pilottone_extract_robust.py  main_process_reference.py  run_all.py
notebooks/: main_editer_correct.ipynb  main_pilottone_extract.ipynb  noise_graph_from_series.ipynb  respiratory_from_image.ipynb  visuals_pilottone.ipynb
pilottone/: pt.py  signal.py
reconstruction/: GIRF.py  client.py  connection.py
src/pylottone/: __init__.py  constants.py  editer.py  mrdhelper.py  pt.py  signal.py  trajectory.py  triggering.py
src/pylottone/reconstruction/: Body6Spine18.xml  client.py  coils.py  connection.py  send_to_recon_server.py
tools/: remove_waveform.py  truncate_acquisitions.py
ui/: selectionui.py
